Bug 14372 - smbd crashes when MacOS Catalina connects if iconv initialization fails.
Summary: smbd crashes when MacOS Catalina connects if iconv initialization fails.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.12.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-06 20:20 UTC by Jeremy Allison
Modified: 2020-05-17 05:18 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.12.next. (2.19 KB, patch)
2020-05-07 19:04 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2020-05-06 20:20:59 UTC

    
Comment 1 Jeremy Allison 2020-05-06 20:22:36 UTC
On initial connect MacOS catalina connects to mdssvc.c pipe. If the  "UTF8-NFD" or "UTF8-NFC" iconv conversions are not installed, the error exits on this pipe cause an smbd crash trying to free an iconv handle of (-1).

Have patch, need bugnumber.
Comment 2 Jeremy Allison 2020-05-07 19:04:42 UTC
Created attachment 15958 [details]
git-am fix for 4.12.next.

Cherry-pick from master. Applies cleanly. Only needed for 4.12.next, not previous versions.
Comment 3 Ralph Böhme 2020-05-13 10:05:44 UTC
Reassigning to Karolin for inclusion in 4.12.
Comment 4 Karolin Seeger 2020-05-14 07:08:38 UTC
(In reply to Ralph Böhme from comment #3)
Pushed to autobuild-v4-12-test.
Comment 5 Karolin Seeger 2020-05-17 05:18:28 UTC
(In reply to Karolin Seeger from comment #4)
Pushed to v4-12-test.
Closing out bug report.

Thanks!